--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,7 +38,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:text="®" />
-        </LinearLayout>
+
+            <Button
+                android:id="@+id/button_mic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="mic" />
+            </LinearLayout>
         
         <LinearLayout
             android:layout_weight="3"
